[gd_scene load_steps=27 format=4 uid="uid://bdtwkbjfc2yjm"]

[ext_resource type="Script" uid="uid://bgn5eou04l6fw" path="res://UI/ShaderPrecompScreen/shader_precomp_screen.gd" id="1_oki52"]
[ext_resource type="PackedScene" uid="uid://cbj6qe7a5dwkw" path="res://Mapping/Dev/building_platform_8x8.tscn" id="2_ycgg1"]
[ext_resource type="Environment" uid="uid://cfeg5fu5v0p4o" path="res://Mesh/Enviroment/GameEnv.tres" id="3_47kto"]
[ext_resource type="Compositor" uid="uid://c6hes6c0mi07n" path="res://Mesh/Enviroment/GameCompositor.tres" id="4_iby3j"]
[ext_resource type="PackedScene" uid="uid://b25k4g328a0jh" path="res://Mapping/Floors/FloorTile1x1.tscn" id="5_ofbok"]
[ext_resource type="PackedScene" uid="uid://dou27ldgaq4cc" path="res://Mapping/Props/bench.tscn" id="6_8iydo"]
[ext_resource type="Material" uid="uid://cc5cujgom31u5" path="res://Mesh/Materials/Floors/ConcreteTiles.tres" id="6_f0w4x"]
[ext_resource type="PackedScene" uid="uid://06pfnmb305cv" path="res://Mapping/Props/WallLight.tscn" id="7_8u4nw"]
[ext_resource type="PackedScene" uid="uid://cjnh3bwuagu50" path="res://UI/ShaderPrecompScreen/RiggedCube.glb" id="11_qm4el"]
[ext_resource type="Material" uid="uid://crsv57v2tbwqk" path="res://Mesh/Parts/SharedMaterials/EyeMat.tres" id="12_cg4fj"]
[ext_resource type="Material" uid="uid://sle1odyxpbnx" path="res://Mesh/Parts/SharedMaterials/HairMat.tres" id="13_odv5m"]
[ext_resource type="Material" uid="uid://c8vrimhqhhto8" path="res://Mesh/Parts/Body/FeminineBody/SkinBodySmartMat.tres" id="14_4alj0"]
[ext_resource type="Material" uid="uid://c2hc7l0jpere0" path="res://Mesh/Parts/SharedMaterials/EyeBrowsMat.tres" id="16_4alj0"]
[ext_resource type="Material" uid="uid://d4ckvbx5va5nn" path="res://Mesh/Parts/Tail/FelineTail/TailMat.tres" id="16_53ind"]
[ext_resource type="Material" uid="uid://13wriie643e5" path="res://Mesh/Parts/SharedMaterials/EyelashesMat.tres" id="17_obufd"]
[ext_resource type="Material" uid="uid://bit1p64srkgtb" path="res://Mesh/Parts/Head/HumanFeminine/Materials/HumanMouthMat.tres" id="18_uawf8"]
[ext_resource type="Material" uid="uid://bo0v0t0xwyewc" path="res://Mesh/Parts/Body/FeminineBody/FurBodySmartMat.tres" id="18_xo4mo"]
[ext_resource type="Material" uid="uid://btoejf7edmi2l" path="res://Mesh/Parts/SharedMaterials/PiercingsMat.tres" id="20_53ind"]
[ext_resource type="PackedScene" uid="uid://b85gkt2ndvnwd" path="res://Mapping/Decals/DecalNumDots.tscn" id="25_g1ojs"]
[ext_resource type="PackedScene" uid="uid://bf5hr37wkj4ke" path="res://Mapping/Walls/WindowA4x3.tscn" id="26_upy2a"]
[ext_resource type="PackedScene" uid="uid://dxwidk66svbvu" path="res://Mapping/World/RockTest1.tscn" id="27_f0w4x"]
[ext_resource type="PackedScene" uid="uid://gvkslhfyjgrp" path="res://Mapping/Props/inmate_bed.tscn" id="28_upy2a"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uawf8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gy311"]

[sub_resource type="ArrayMesh" id="ArrayMesh_rdtr6"]
resource_name = "RiggedCube_Cube_001"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 2, 2),
"attribute_data": PackedByteArray("AADAPgAAgD8AACA/AABAPwAAID8AAIA/AADAPgAAQD8AAMA+AABAPwAAID8AAAA/AAAgPwAAQD8AAMA+AAAAPwAAwD4AAAA/AAAgPwAAgD4AACA/AAAAPwAAwD4AAIA+AADAPgAAgD4AACA/AAAAAAAAID8AAIA+AADAPgAAAAAAAAA+AAAAPwAAwD4AAIA+AADAPgAAAD8AAAA+AACAPgAAID8AAAA/AABgPwAAgD4AAGA/AAAAPwAAID8AAIA+"),
"bone_aabbs": [AABB(-1, -1, -1, 2, 2, 2.00001)],
"format": 34359745559,
"index_count": 36,
"index_data": PackedByteArray("AAABAAIAAAADAAEABAAFAAYABAAHAAUACAAJAAoACAALAAkADAANAA4ADAAPAA0AEAARABIAEAATABEAFAAVABYAFAAXABUA"),
"material": SubResource("StandardMaterial3D_gy311"),
"primitive": 3,
"skin_data": PackedByteArray("AAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAA"),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray("AACAvwAAgL8AAIA/AACAvwAAgD8AAIC/AACAvwAAgD8AAIA/AACAvwAAgL8AAIC/AACAvwAAgL8AAIC/AACAPwAAgD8AAIC/AACAvwAAgD8AAIC/AACAPwAAgL8AAIC/AACAPwAAgL8AAIC/AACAPwAAgD8AAIA/AACAPwAAgD8AAIC/AACAPwAAgL8AAIA/AACAPwAAgL8AAIA/AACAvwAAgD8AAIA/AACAPwAAgD8AAIA/AACAvwAAgL8AAIA/AACAvwAAgL8AAIC/AACAPwAAgL8AAIA/AACAPwAAgL8AAIC/AACAvwAAgL8AAIA/AACAPwAAgD8AAIC/AACAvwAAgD8AAIA/AACAvwAAgD8AAIC/AACAPwAAgD8AAIA/AAD/f/9///8AAP9//3///wAA/3//f///AAD/f/9//////////3//////////f/////////9//////////3///////3//f///////f/9///////9//3///////3//f////3//f/9/////f/9//3////9//3//f////3//f/9/////fwAA////v/9/AAD///+//38AAP///7//fwAA////v/9///8AAP+//3///wAA/7//f///AAD/v/9///8AAP+/")
}]
blend_shape_mode = 0

[sub_resource type="Skin" id="Skin_3p35b"]
resource_name = "Skin"
bind_count = 1
bind/0/name = &"Bone"
bind/0/bone = -1
bind/0/pose = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="ShaderPrecompScreen" type="Node3D"]
script = ExtResource("1_oki52")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.996078)

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Loading.."
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuildingPlatform8x8" parent="." instance=ExtResource("2_ycgg1")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.797812, 0.540963, -0.266187, 0.357121, 0.779736, 0.514273, 0.485758, 0.315234, -0.815271, 0, 2.95159, 0)
light_energy = 0.2
light_indirect_energy = 0.2
light_volumetric_fog_energy = 0.0
shadow_bias = 0.025
directional_shadow_mode = 0
directional_shadow_fade_start = 0.1
directional_shadow_max_distance = 10.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("3_47kto")
compositor = ExtResource("4_iby3j")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.978971, 0.204001, 0, -0.204001, 0.978971, 0, 1.2346, 2.79053)
light_energy = 2.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.796214, 2.50458)

[node name="FloorTile1x1" parent="." instance=ExtResource("5_ofbok")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0272092, 0)
visible = false

[node name="FloorTile1x2" parent="." instance=ExtResource("5_ofbok")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.761492, 0.0272092, 0)

[node name="Cube_083" parent="FloorTile1x2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.57068, 0, 0.5)
surface_material_override/0 = ExtResource("6_f0w4x")

[node name="Bench" parent="." instance=ExtResource("6_8iydo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.775988, 0.0211385, -1.10485)
visible = false

[node name="WallLight" parent="." instance=ExtResource("7_8u4nw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.10686, 0.451218, -1.05698)
visible = false

[node name="RiggedCube2" parent="." instance=ExtResource("11_qm4el")]
transform = Transform3D(0.1307, 0, 0, 0, 0.1307, 0, 0, 0, 0.1307, -1.0495, 0.499355, 0)

[node name="Cube" parent="RiggedCube2/RiggedCube/Skeleton3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.47183, 0, -2.50403)
visible = false
surface_material_override/0 = SubResource("StandardMaterial3D_uawf8")

[node name="Cube2" type="MeshInstance3D" parent="RiggedCube2/RiggedCube/Skeleton3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.88356, 0, -2.50403)
visible = false
mesh = SubResource("ArrayMesh_rdtr6")
skin = SubResource("Skin_3p35b")
surface_material_override/0 = ExtResource("12_cg4fj")

[node name="Cube3" type="MeshInstance3D" parent="RiggedCube2/RiggedCube/Skeleton3D" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.216088, 0, -2.50403)
visible = false
mesh = SubResource("ArrayMesh_rdtr6")
skin = SubResource("Skin_3p35b")
surface_material_override/0 = ExtResource("13_odv5m")

[node name="Cube4" type="MeshInstance3D" parent="RiggedCube2/RiggedCube/Skeleton3D" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.37662, 0, -2.50403)
visible = false
mesh = SubResource("ArrayMesh_rdtr6")
skin = SubResource("Skin_3p35b")
surface_material_override/0 = ExtResource("14_4alj0")

[node name="Cube5" type="MeshInstance3D" parent="RiggedCube2/RiggedCube/Skeleton3D" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.66902, 0, -2.50403)
visible = false
mesh = SubResource("ArrayMesh_rdtr6")
skin = SubResource("Skin_3p35b")
surface_material_override/0 = ExtResource("16_53ind")

[node name="Cube6" type="MeshInstance3D" parent="RiggedCube2/RiggedCube/Skeleton3D" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.66902, 0, -2.50403)
visible = false
mesh = SubResource("ArrayMesh_rdtr6")
skin = SubResource("Skin_3p35b")
surface_material_override/0 = ExtResource("16_4alj0")

[node name="Cube7" type="MeshInstance3D" parent="RiggedCube2/RiggedCube/Skeleton3D" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.66902, 0, -2.50403)
visible = false
mesh = SubResource("ArrayMesh_rdtr6")
skin = SubResource("Skin_3p35b")
surface_material_override/0 = ExtResource("17_obufd")

[node name="Cube8" type="MeshInstance3D" parent="RiggedCube2/RiggedCube/Skeleton3D" index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.66902, 0, -2.50403)
visible = false
mesh = SubResource("ArrayMesh_rdtr6")
skin = SubResource("Skin_3p35b")
surface_material_override/0 = ExtResource("18_uawf8")

[node name="Cube9" type="MeshInstance3D" parent="RiggedCube2/RiggedCube/Skeleton3D" index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.18783, 0, -2.50403)
visible = false
mesh = SubResource("ArrayMesh_rdtr6")
skin = SubResource("Skin_3p35b")
surface_material_override/0 = ExtResource("20_53ind")

[node name="Cube10" type="MeshInstance3D" parent="RiggedCube2/RiggedCube/Skeleton3D" index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.18783, 0, -2.50403)
mesh = SubResource("ArrayMesh_rdtr6")
skin = SubResource("Skin_3p35b")
surface_material_override/0 = ExtResource("14_4alj0")

[node name="Cube11" type="MeshInstance3D" parent="RiggedCube2/RiggedCube/Skeleton3D" index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.18783, 0, -2.50403)
mesh = SubResource("ArrayMesh_rdtr6")
skin = SubResource("Skin_3p35b")
surface_material_override/0 = ExtResource("18_xo4mo")

[node name="DecalNumDots" parent="." instance=ExtResource("25_g1ojs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.33682, 0)

[node name="WindowA4x3" parent="." instance=ExtResource("26_upy2a")]
transform = Transform3D(0.152448, 0, 0, 0, 0.152448, 0, 0, 0, 0.152448, 0.519425, 1.11186, 0)

[node name="RockTest1" parent="." instance=ExtResource("27_f0w4x")]
transform = Transform3D(0.131539, 0, 0, 0, 0.131539, 0, 0, 0, 0.131539, -0.0876953, 1.23867, 0)

[node name="InmateBed" parent="." instance=ExtResource("28_upy2a")]
transform = Transform3D(0.236479, 0, 0, 0, 0.236479, 0, 0, 0, 0.236479, -1.36915, 0, -1.20623)

[editable path="FloorTile1x2"]
[editable path="RiggedCube2"]
